feat: sua lai kho